[package]
name = "checkmate_lsp"
version = "0.1.0"
edition = "2021"
authors = ["nkoporec <hey@nkoporec.com>"]
description = "A LSP framework to run external check/sniff tools."
readme = "README.md"
repository = "https://github.com/nkoporec/checkmate/"
license = "MIT"
license-file = "LICENSE"
keywords = ["lsp"]
categories = ["command-line-utilities", "development-tools", "parser-implementations"]

[dependencies]
tower-lsp = "0.19.0"
log = "0.4.17"
serde_json = "1.0.81"
tokio = { version = "1.17.0", features = ["full"] }
flexi_logger = "0.25.5"
dashmap = "5.5.0"
serde_derive = "1.0.180"
serde = "1.0.180"
clap = {version="4.3.19", features = ["derive"]}
simple-home-dir = "0.1.4"

